--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "https://clothesnodejs-production.up.railway.app/",
   "eslintConfig": {
     "extends": [
       "react-app",
