--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "webpack": "^5.70.0",
+    "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
