--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.3",
-    "webpack": "^5.70.0",
-    "webpack-dev-server": "^4.7.4"
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +26,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
- 
   "eslintConfig": {
     "extends": [
       "react-app",
